--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
+ * Theme Name: Colby Libraries Theme
  * Description: Starter Theme to use with Timber
  * Author: Upstatement and YOU!
  * Template: colby-college-theme
