--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,7 +12,7 @@
 @import 'global/variables';
 @import 'global/layout';
 
-@import '../../../colby-college-theme/src/styles/styles.css';
+@import '../../../colby-college-theme/src/styles/styles.scss';
 
 // /* Body No Scroll */
 // .no-scroll {
