--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -311,53 +311,52 @@
 //     }
 // }
 
-// .accordion {
+.accordion {
+    &__panel + &__panel {
+        // border-top: 1px solid #dcdcdc;
+    }
 
-//     &__panel + &__panel {
-//       // border-top: 1px solid #dcdcdc;
-//     }
+    &__header {
+        margin: 0;
+    }
 
-//     &__header {
-//       margin: 0;
-//     }
+    &__button {
+        z-index: 10;
+        position: relative;
+        margin: 0;
+        border: 0;
+        padding: 20px 14px;
+        width: 100%;
+        text-align: left;
+        appearance: none;
+        cursor: pointer;
+    }
 
-//     &__button {
-//       z-index: 10;
-//       position: relative;
-//       margin: 0;
-//       border: 0;
-//       padding: 20px 14px;
-//       width: 100%;
-//       text-align: left;
-//       appearance: none;
-//       cursor: pointer;
-//     }
+    &__window {
+        margin: 0;
+        height: 0;
+        overflow: hidden;
+        visibility: hidden;
+        transition: 0.2s ease-in-out;
+    }
 
-//     &__window {
-//       margin: 0;
-//       height: 0;
-//       overflow: hidden;
-//       visibility: hidden;
-//       transition: .2s ease-in-out;
-//     }
+    &__content {
+        padding: 20px 14px;
+    }
 
-//     &__content {
-//       padding: 20px 14px;
-//     }
+    p:nth-child(1) {
+        margin-top: 0;
+    }
 
-//     p:nth-child(1) {
-//       margin-top: 0;
-//     }
+    &__test {
+        font-size: 3rem;
+        line-height: 1.125;
+        font-weight: 700;
+    }
+}
 
-//     &__test {
-//       font-size: 3rem;
-//       line-height: 1.125;
-//       font-weight: 700;
-//     }
-//   }
-
-//   .intro-context {
-//     p + p {
-//         @apply mt-4;
-//     }
-//   }
+.intro-context {
+    p + p {
+        @apply mt-4;
+    }
+}
