--- a/src/twig/components/libraries-search/libraries-search.twig
+++ b/src/twig/components/libraries-search/libraries-search.twig
@@ -2,31 +2,14 @@
 <div class="flex flex-col md:flex-row">
 <div class="mr-4"><component is="libraries-search"></component></div>
 <div class="embed pt-6 p-0 pb-6">
-  <div class="embed__main bg-lightGray h-full p-4 text-indigo">
-<script src="https://colby.libcal.com/js/hours_today.js"></script>
-<div id="s_lc_tdh_5004_0"></div>
+  <div class="embed__main bg-lightGray h-full p-4 text-indigo font-body text-sm">
+<script src="https://colby.libcal.com/js/hours_today.js"></script> 
+<div id="s_lc_tdh_5004_0"></div> 
 <script>
-jQuery(function(){
-var s_lc_tdh_5004_0 = new jQuery.LibCalTodayHours( jQuery("#s_lc_tdh_5004_0"), { iid: 5004, lid: 0 });
+$(function(){ 
+var s_lc_tdh_5004_0 = new $.LibCalTodayHours( $("#s_lc_tdh_5004_0"), { iid: 5004, lid: 0 }); 
 });
-</script>
-
-<!-- Please note: The following styles are optional, feel free to modify! //-->
-<style>
-.s-lc-w-today { border-spacing: 0; border-collapse: collapse; width: 100%; }.s-lc-w-today td, .s-lc-w-today th { padding: 8px 5px; }
-.s-lc-w-head { text-align: center; border-bottom: 1px solid #ddd; }
-.s-lc-w-loading { margin-top: 80px; text-align: center; }
-.s-lc-w-sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); border: 0; }
-.s-lc-w-btn { line-height: 1.5; border-radius: 3px; display: inline-block; padding: 3px 6px; margin-bottom: 0; font-size: 12px; font-weight: 400; text-align: center; white-space: nowrap; vertical-align: middle; touch-action: manipulation; cursor: pointer; user-select: none; border: 1px solid #ccc; color: #333; background-color: #fff; }
-.s-lc-w-btn:active, .s-lc-w-btn:hover { color: #333; background-color: #d4d4d4; border-color: #8c8c8c; }
-.s-lc-w-previous { float: left;}
-.s-lc-w-next { float: right; }
-.s-lc-w-location td { font-weight: bold; }
-.s-lc-w-department .s-lc-w-name { padding-left: 20px; }
-.s-lc-w-times { border-bottom: 1px solid #ddd; }
-.s-lc-w-today-view-link { text-decoration: none; }
-.s-lc-w-today-view-all { padding: 8px 5px; }
-</style>
+</script> 
 </div>
 </div>
 </div>
