--- a/src/twig/components/libraries-search/libraries-search.twig
+++ b/src/twig/components/libraries-search/libraries-search.twig
@@ -3,6 +3,7 @@
 <div class="mr-4"><component is="libraries-search"></component></div>
 <div class="embed pt-6 p-0 pb-6">
   <div class="embed__main bg-lightGray h-full p-4 text-indigo font-body text-sm">
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> 
 <script src="https://colby.libcal.com/js/hours_today.js"></script> 
 <div id="s_lc_tdh_5004_0"></div> 
 <script>
