--- a/src/twig/components/search-li/search-li.twig
+++ b/src/twig/components/search-li/search-li.twig
@@ -21,7 +21,7 @@
           <svg class="fill-indigo-500 group-hover:fill-indigo-700 w-[17px] md:w-[12px] mr-1.5 transition-all duration-200 ease-in-out" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16">
             <path d="M6 2C3.8 2 2 3.8 2 6s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM0 6c0-3.3 2.7-6 6-6s6 2.7 6 6c0 1.3-.4 2.5-1.1 3.5l4.8 4.8c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-4.8-4.8C8.5 11.6 7.3 12 6 12c-3.3 0-6-2.7-6-6z" style="fill-rule:evenodd; clip-rule:evenodd"/>
           </svg>
-          Search
+          Search the Libraries' Website
         </span>
       </template>
     </modal>
