see full hours link

--- a/src/twig/components/libraries-search/libraries-search.twig
+++ b/src/twig/components/libraries-search/libraries-search.twig
@@ -1,17 +1,18 @@
 <div class="flex justify-center bg-hero__pattern">
-<div class="flex flex-col md:flex-row">
-<div class="mr-4"><component is="libraries-search"></component></div>
-<div class="embed pt-6 p-0 pb-6">
-  <div class="embed__main bg-transparent h-full p-4 text-indigo font-body text-12">
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> 
-<script src="https://colby.libcal.com/js/hours_today.js"></script> 
-<div id="s_lc_tdh_5004_0"></div> 
-<script>
-$(function(){ 
-var s_lc_tdh_5004_0 = new $.LibCalTodayHours( $("#s_lc_tdh_5004_0"), { iid: 5004, lid: 0 }); 
-});
-</script> 
-</div>
-</div>
-</div>
+    <div class="flex flex-col md:flex-row">
+        <div class="mr-4"><component is="libraries-search"></component></div>
+        <div class="embed pt-6 p-0 pb-6">
+            <div class="embed__main bg-transparent h-full p-4 text-indigo font-body text-12">
+                <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> 
+                <script src="https://colby.libcal.com/js/hours_today.js"></script> 
+                <div id="s_lc_tdh_5004_0"></div> 
+                <script>
+                    $(function(){ 
+                    var s_lc_tdh_5004_0 = new $.LibCalTodayHours( $("#s_lc_tdh_5004_0"), { iid: 5004, lid: 0 }); 
+                    });
+                </script>
+            <div class="mt-1"><a href="/about/hours">See Full Hours</a></div>
+            </div>
+        </div>
+    </div>
 </div>
