--- a/src/twig/components/libraries-search/libraries-search.twig
+++ b/src/twig/components/libraries-search/libraries-search.twig
@@ -1,7 +1,7 @@
 <div class="flex justify-center bg-hero__pattern">
-    <div class="flex flex-col md:flex-row">
-        <div class="mr-4"><component is="libraries-search"></component></div>
-        <div class="embed pt-6 p-0 pb-6">
+    <div class="flex flex-col lg:flex-row">
+        <div class="md:mr-4"><component is="libraries-search"></component></div>
+        <div class="embed pt-6 p-0 pb-6 flex justify-center lg:justify-start">
             <div class="embed__main bg-transparent h-full p-4 text-indigo font-body text-12">
                 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> 
                 <script src="https://colby.libcal.com/js/hours_today.js"></script> 
