--- a/src/twig/components/header/header.twig
+++ b/src/twig/components/header/header.twig
@@ -63,7 +63,7 @@
         </div>
         <div class="bg-indigo-200 w-full p-5 pb-20">
           <ul class="grid lg:inline-flex grid-cols-3 lg:grid-cols-none grid-rows-2 lg:grid-rows-none gap-2 lg:gap-0 w-full lg:w-auto lg:space-x-6">
-
+            {% include searchLi %}
             {% for item in utility %}
               <li class="font-body font-normal text-14 lg:text-10 leading-110">
                 <a class="block py-2 text-indigo-800 hover:text-indigo-1000 hover:underline transition-all duration-200 ease-in-out" href="{{ item.url }}">{{ item.title }}</a>
@@ -73,18 +73,16 @@
         </div>
       </div>
       <div class="hidden lg:visible lg:block lg:w-full w-0">
-        <div class="header__utility flex md:block h-[118px] md:h-auto pt-4 md:pt-0 px-5 bg-indigo-100">
+        <div class="header__utility flex justify-end h-[118px] lg:h-auto pt-4 lg:pt-0 px-5 bg-indigo-100">
           <ul class="grid md:inline-flex grid-cols-3 md:grid-cols-none grid-rows-2 md:grid-rows-none gap-x-5 md:gap-0 w-full md:w-auto md:space-x-6">
             {% for item in utility %}
               <li class="font-body font-normal text-16 lg:text-12 leading-140">
                 <a class="block py-2 text-indigo-800 hover:text-indigo-1000 hover:underline transition-all duration-200 ease-in-out" href="{{ item.url }}">{{ item.title }}</a>
               </li>
             {% endfor %}
-            
+            {% include searchLi %}
           </ul>
-          {% include searchLi with {
-          breakpoints: 'hidden md:block float-right'
-        } %}
+          
         </div>
         <ul class="header__main flex md:flex-row flex-col justify-center md:justify-end h-[calc(100%_-_170px)] md:h-auto md:space-x-12 md:space-y-0 space-y-6 md:px-6 pl-24 md:px-4  w-full md:w-auto overflow-y-auto">
           {% for item in main %}
