--- a/src/twig/components/footer/footer.twig
+++ b/src/twig/components/footer/footer.twig
@@ -2,58 +2,60 @@
 
 {% if in_component_library %}
   {% set logo = '@logo' %}
-  {% set button = '@button' %}
 {% else %}
   {% set logo = 'logo.twig' %}
-  {% set button = 'button.twig' %}
 {% endif %}
 
-<footer class="footer bg-indigo py-14 space-y-14">
-  <div class="footer__inner md:grid md:grid-cols-12 gap-x-10 max-w-screen-2xl w-full px-5 my-0 mx-auto space-y-8 md:space-y-0">
-    <div class="footer__left md:col-span-5 flex justify-between md:justify-start items-start md:space-x-8 lg:space-x-16 md:border-r border-indigo-900 border-solid">
-      <a class="block hover:text-white hover:underline transition-all duration-200 ease-in-out" href="{{ address.url }}">{% include logo with {
-        class: 'fill-white w-[125px] md:w-[100px]',
-      } %}</a>
-      <address class="footer__address font-body font-normal text-16 md:text-12 text-indigo-500 not-italic leading-140 space-y-2">
-        {{ address.text }}
-        <a class="block hover:text-white hover:underline transition-all duration-200 ease-in-out" href="tel:{{ phone }}">{{ phone }}</a>
-      </address>
+<footer class="footer bg-indigo py-14 space-y-12 md:space-y-14">
+  <div class="footer__inner md:grid md:grid-cols-12 gap-x-10 max-w-screen-2xl w-full px-5 my-0 mx-auto">
+    <div class="footer__left md:col-span-6">
+      <a class="block" href="{{ address.url }}">
+        {% include logo with {
+          class: 'fill-white w-[90px] md:w-[100px]',
+          textClass: 'text-white'
+        } %}
+      </a>
+      <p class="font-body font-normal text-14 leading-130 text-gray-500 mt-8 md:mt-7">{{ address.text }}</p>
     </div>
-    <div class="footer__right lg:col-start-7 md:col-span-6">
-      <ul class="footer__links flex flex-wrap space-between pt-8 md:pt-0 pb-4 md:pb-0 border-y md:border-y-0 border-indigo-900 border-solid">
+    <div class="footer__right md:col-start-8 md:col-span-5 mt-6 md:mt-0">
+      <ul class="footer__links grid grid-cols-2 gap-4">
         {% for item in main %}
-          <li class="flex-col basis-1/2 md:basis-1/2 lg:basis-1/4 font-body font-normal text-16 md:text-14 text-indigo-500 leading-130 mb-4">
-            <a class="text-indigo-500 hover:text-white hover:underline transition-all duration-200 ease-in-out" href="{{ item.url }}">{{ item.title }}</a>
+          <li class="col-span-1 font-body font-normal text-18 leading-120">
+            <a class="text-gray-200 hover:text-white hover:underline transition-all duration-200 ease-in-out" href="{{ item.url }}">{{ item.title }}</a>
           </li>
         {% endfor %}
       </ul>
     </div>
+    <div class="col-span-12 pb-8 md:pb-12 border-b border-gray-800"></div>
   </div>
   <div class="footer__inner md:grid md:grid-cols-12 gap-x-10 max-w-screen-2xl w-full px-5 my-0 mx-auto">
-    <div class="footer__bottom md:flex justify-between md:col-span-12 space-y-10 md:space-y-0">
-      <ul class="footer__utility flex space-x-10">
+    <div class="md:col-span-12 md:flex justify-between items-center">
+      <ul class="footer__utility flex flex-wrap md:flex-nowrap gap-6 md:gap-0 md:space-x-6">
         {% for item in utility %}
-          <li class="font-body font-bold text-18 md:text-10 text-indigo-200 leading-140">
-            <a class="flex items-center text-indigo-200 hover:text-white hover:underline transition-all duration-200 ease-in-out" href="{{ item.url }}">
-              {{ icons.icon(item.title|lower, 'fill-canary w-4 md:w-3 h-4 md:h-3 mr-2 md:mr-1') }}
-              {{ item.title }}
+          <li class="inline-block">
+            <a class="btn group inline-flex flex-row items-center space-x-1.5 rounded border border-solid border-indigo-800 hover:border-indigo-800 font-body font-normal text-14 leading-130 !no-underline text-white bg-indigo focus:outline focus:outline-2 focus:outline-canary outline-offset-[-1px] py-1.5 px-4 transition-all duration-200 ease-in-out" href="{{ item.url }}">
+              {{ icons.icon(item.title|lower, 'fill-white w-3.5 h-3.5') }}
+              <span class="btn__text">
+                {{ item.title }}
+                <div class="btn__border block bg-white h-px w-0 group-hover:w-full transition-all duration-200 ease-in-out"></div>
+              </span>
             </a>
           </li>
         {% endfor %}
       </ul>
-      <div class="footer__connect flex space-between items-center">
-        <ul class="footer__socials flex space-x-4 ml-8">
-          {% for item in social %}
-            <li class="text-[0]">
-              <a class="flex text-indigo-100" href="{{ item.platform.url }}">
-                {{ icons.icon(item.platform.title|lower, 'fill-indigo-100 hover:fill-indigo-500 max-w-5 md:max-w-4 max-h-4 md:max-h-3.5 w-full transition-all duration-200 ease-in-out') }}
-                <span class="sr-only">{{ item.platform.title }}</span>
-              </a>
-            </li>
-          {% endfor %}
-        </ul>
-        <div class="bg-fdlp_logo bg-contain bg-no-repeat bg-center h-[100px] w-[100px] ml-4"></div>
-      </div>
+      <ul class="footer__socials flex space-x-4 mt-10 md:mt-0">
+        {% for item in social %}
+          <li class="text-[0]">
+            <a class="flex text-indigo-100" href="{{ item.platform.url }}">
+              {{ icons.icon(item.platform.title|lower, 'fill-indigo-100 hover:fill-indigo-500 max-w-6 md:max-w-4 max-h-6 md:max-h-4 w-full transition-all duration-200 ease-in-out') }}
+              <span class="sr-only">{{ item.platform.title }}</span>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="md:col-span-12 md:flex justify-end items-center">
+    <div class="bg-fdlp_logo bg-contain bg-no-repeat bg-center h-[100px] w-[100px]"></div>
     </div>
   </div>
 </footer>
