--- a/src/twig/components/footer/footer.twig
+++ b/src/twig/components/footer/footer.twig
@@ -44,13 +44,13 @@
         {% endfor %}
       </ul>
       <div class="mt-10 md:mt-0">
-        <p class="text-white font-bold mr-2 text-12 inline-block">Follow Us on Social Media</p>
+        <p class="text-white font-bold mr-2 text-14 inline-block">Follow Us on Social Media</p>
         <div class="inline-block align-middle">
           <ul class="footer__socials flex space-x-4 ">
             {% for item in social %}
               <li class="text-[0]">
                 <a class="flex text-indigo-100" href="{{ item.platform.url }}">
-                  {{ icons.icon(item.platform.title|lower, 'fill-indigo-100 hover:fill-indigo-500 max-w-6 md:max-w-4 max-h-6 md:max-h-4 w-full transition-all duration-200 ease-in-out') }}
+                  {{ icons.icon(item.platform.title|lower, 'fill-indigo-100 hover:fill-indigo-500 max-w-6 max-h-6 w-full transition-all duration-200 ease-in-out') }}
                   <span class="sr-only">{{ item.platform.title }}</span>
                 </a>
               </li>
