--- a/src/twig/components/header/header.twig
+++ b/src/twig/components/header/header.twig
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="hidden lg:visible lg:block lg:w-full w-0">
-        <nav class="header__utility flex justify-end h-[118px] lg:h-auto pt-4 lg:pt-0 px-5 bg-indigo-100">
+        <nav class="header__utility flex justify-end h-[118px] lg:h-auto pt-4 lg:pt-0 px-5 bg-indigo-100" aria-label="Utility menu">
           <ul class="grid md:inline-flex grid-cols-3 md:grid-cols-none grid-rows-2 md:grid-rows-none gap-x-5 md:gap-0 w-full md:w-auto md:space-x-6">
             {% for item in utility %}
               <li class="font-body font-normal text-16 lg:text-12 leading-140">
@@ -83,7 +83,7 @@
             {% include searchLi %}
           </ul>
         </nav>
-        <ul class="header__main flex md:flex-row flex-col justify-center md:justify-end h-[calc(100%_-_170px)] md:h-auto md:space-x-12 md:space-y-0 space-y-6 md:px-6 pl-24 md:px-4  w-full md:w-auto overflow-y-auto">
+        <ul class="header__main flex md:flex-row flex-col justify-center md:justify-end h-[calc(100%_-_170px)] md:h-auto md:space-x-12 md:space-y-0 space-y-6 md:px-6 pl-24 md:px-4  w-full md:w-auto overflow-y-auto" aria-label="Main menu">
           {% for item in main %}
             <li class="font-extended font-normal text-24 lg:text-16 leading-100 !ml-6 lg:!ml-12 md:[&:first-child]:!ml-0">
               <a
