change main menu to nav element

--- a/src/twig/components/header/header.twig
+++ b/src/twig/components/header/header.twig
@@ -83,18 +83,18 @@
             {% include searchLi %}
           </ul>
         </nav>
-        <ul class="header__main flex md:flex-row flex-col justify-center md:justify-end h-[calc(100%_-_170px)] md:h-auto md:space-x-12 md:space-y-0 space-y-6 md:px-6 pl-24 md:px-4  w-full md:w-auto overflow-y-auto" aria-label="Main menu">
+        <nav class="header__main flex md:flex-row flex-col justify-center md:justify-end h-[calc(100%_-_170px)] md:h-auto md:space-x-12 md:space-y-0 space-y-6 md:px-6 pl-24 md:px-4  w-full md:w-auto overflow-y-auto" aria-label="Main menu">
           {% for item in main %}
-            <li class="font-extended font-normal text-24 lg:text-16 leading-100 !ml-6 lg:!ml-12 md:[&:first-child]:!ml-0">
+            <div class="font-extended font-normal text-24 lg:text-16 leading-100 !ml-6 lg:!ml-12 md:[&:first-child]:!ml-0">
               <a
                 class="block md:py-7 text-indigo hover:text-indigo-1000 border-b-2 border-solid border-transparent md:hover:border-canary md:focus:border-azure md:outline-0 transition-all duration-200 ease-in-out"
                 :class="{ '!text-indigo md:border-azure': header.checkUrl('{{item.title}}') }"
                 href="{{ item.url }}"
                 :target="'{{item.target}}'"
               >{{ item.title }}</a>
-            </li>
+            </div>
           {% endfor %}
-        </ul>
+        </nav>
       </div>
     </div>
   </div>
