--- a/src/twig/components/footer/footer.twig
+++ b/src/twig/components/footer/footer.twig
@@ -10,10 +10,24 @@
   <div class="footer__inner md:grid md:grid-cols-12 gap-x-10 max-w-screen-2xl w-full px-5 my-0 mx-auto">
     <div class="footer__left md:col-span-6">
       <a class="block" href="{{ address.url }}">
-        {% include logo with {
-          class: 'fill-white w-[90px] md:w-[100px]',
-          textClass: 'text-white'
-        } %}
+        
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 26" class="fill-white w-[90px] md:w-[100px]" style="enable-background:new 0 0 98 50">
+  <g id="Layer_7" data-name="Layer 7">
+    <text class="cls-1" transform="translate(9.88 25.46) scale(.91 1)" style="font-size: 4.48px;font-family: LibreFranklin-Regular, 'Libre Franklin';letter-spacing: -.05em;"><tspan x="0" y="0">BIXLER</tspan></text>
+  </g>
+  <g id="Layer_6" data-name="Layer 6">
+    <text class="cls-3" transform="translate(31.8 25.46) scale(.91 1)" style="letter-spacing: -.05em;font-size: 4.48px;font-family: LibreFranklin-Regular, 'Libre Franklin';"><tspan x="0" y="0">MILLER</tspan></text>
+  </g>
+  <g id="Layer_8" data-name="Layer 8">
+    <text class="cls-1" transform="translate(27.07 25.46) scale(.91 1)" style="font-size: 4.48px;font-family: LibreFranklin-Regular, 'Libre Franklin';;letter-spacing: -.05em;"><tspan x="0" y="0">|</tspan></text>
+  </g>
+  <g id="Layer_2" data-name="Layer 2">
+    <text class="cls-4" transform="translate(0 6.1)" style="font-family: LibreFranklin-SemiBold, 'Libre Franklin';font-size: 7px;font-weight: 600;"><tspan class="cls-7" x="0" y="0">COL</tspan><tspan class="cls-5" x="13.71" y="0">B</tspan><tspan class="cls-7" x="18.11" y="0" style="letter-spacing: -.05em;">Y COLL</tspan><tspan class="cls-6" x="41.57" y="0" style="letter-spacing: -.1em;">E</tspan><tspan class="cls-8" x="45.37" y="0" style="letter-spacing: -.05em;">GE</tspan></text>
+  </g>
+  <g id="Layer_3" data-name="Layer 3">
+    <text class="cls-2" transform="translate(.33 19.19) scale(.74 1)" style="font-size: 14.28px;font-weight: 700;letter-spacing: -.05em;font-family: LibreFranklin-Bold, 'Libre Franklin';"><tspan x="0" y="0">LIBRARIES</tspan></text>
+  </g>
+</svg>
       </a>
       <p class="font-body font-normal text-14 leading-130 text-gray-500 mt-8 md:mt-7">{{ address.text }}</p>
     </div>
